[gd_scene load_steps=11 format=3 uid="uid://b4628lmdiitnk"]

[ext_resource type="Texture2D" uid="uid://dv2ardwlp1rcy" path="res://assets/Enemies/slime_red.png" id="1_1kfdk"]
[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_sng64"]
[ext_resource type="Texture2D" uid="uid://b6vu4uxeeo4c8" path="res://assets/FX/bomb_explosion.png" id="3_dbdf3"]
[ext_resource type="AudioStream" uid="uid://di1smj38gta3b" path="res://sounds/toggle_003.ogg" id="4_8t7ni"]

[sub_resource type="Animation" id="Animation_828br"]
resource_name = "Enemi_Wallk"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 2]
}

[sub_resource type="Animation" id="Animation_6tlmj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ld2di"]
_data = {
"Enemi_Wallk": SubResource("Animation_828br"),
"RESET": SubResource("Animation_6tlmj")
}

[sub_resource type="Animation" id="Animation_41dav"]
resource_name = "Dead_FX"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Dead_FX:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Dead_FX:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_1hscm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Dead_FX:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Dead_FX:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dhw2q"]
_data = {
"Enemy_Dead_FX": SubResource("Animation_41dav"),
"RESET": SubResource("Animation_1hscm")
}

[node name="Enemy" type="CharacterBody2D"]
position = Vector2(0, -8)
up_direction = Vector2(0, 1)
script = ExtResource("1_sng64")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_1kfdk")
hframes = 5
vframes = 2

[node name="Dead_FX" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, 4)
texture = ExtResource("3_dbdf3")
hframes = 5

[node name="MapDetector" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(7, 8, -7, 8, -7, 3, 0, -1, 7, 3)

[node name="Area2D" type="Area2D" parent="."]

[node name="Player_Detector" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(-8, 8, -8, 3, 0, -2, 8, 3, 8, 8)

[node name="RayCast_Floor" type="RayCast2D" parent="."]
position = Vector2(-8, 4)
scale = Vector2(0.2, 0.2)
target_position = Vector2(0, 30)
collision_mask = 4

[node name="RayCast_Wall" type="RayCast2D" parent="."]
position = Vector2(-9.53674e-07, 4)
scale = Vector2(0.2, 0.2)
target_position = Vector2(-50, 1.90735e-06)
collision_mask = 4
hit_from_inside = true

[node name="Enemy_Walk_AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ld2di")
}

[node name="Enemy_Dead_FX_AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dhw2q")
}

[node name="damage_audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_8t7ni")
volume_db = -10.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="animation_finished" from="Enemy_Dead_FX_AnimationPlayer" to="." method="_on_enemy_dead_fx_animation_player_animation_finished"]
